fix(YALB-1650): Fix views flex radio buttons not wrapping

--- a/web/profiles/custom/yalesites_profile/modules/custom/ys_views_basic/assets/css/views-basic.css
+++ b/web/profiles/custom/yalesites_profile/modules/custom/ys_views_basic/assets/css/views-basic.css
@@ -192,7 +192,7 @@
   .fieldset__wrapper--group
   .form-boolean-group {
   display: flex;
-  flex-direction: row;
   gap: 1rem;
   width: 100%;
+  flex-flow: row wrap;
 }
